--- a/package.json
+++ b/package.json
@@ -20,16 +20,21 @@
   },
   "dependencies": {
     "@prisma/client": "^4.3.1",
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.7.16",
     "@types/pg": "^8.6.5",
     "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "cryptr": "^6.0.3",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.8.0"
   }
 }
